--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "antd": "^5.18.3",
     "axios": "^1.7.2",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
